additional padding to avoid overlap on mobile

--- a/frontend/src/components/Search/Search.module.css
+++ b/frontend/src/components/Search/Search.module.css
@@ -23,7 +23,7 @@
   border: 3px solid var(--pastel-green-light);
   border-radius: 40px;
   padding: var(--space-size-13);
-  padding: 1.5%;
+  padding: 1.5% 2%;
   background-color: white;
 }
 
@@ -48,7 +48,6 @@
 }
 
 .magnifyingGlass {
-  margin-right: 1%;
   font-size: clamp(1.4rem, 3.5vw, 2rem);
   color: var(--pastel-green-light);
 }
